--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -83,3 +83,6 @@ File: App Css File
 @import "plugins/leaflet-maps";
 @import "plugins/sweetalert2";
 @import "plugins/rangeslider";
+
+// Custom styles for AdvancedCouponSystem
+@import "custom";
