--- a/resources/scss/structure/_layout.scss
+++ b/resources/scss/structure/_layout.scss
@@ -23,6 +23,8 @@
 .logo-lg {
     img {
         height: $logo-lg-height;
+        width: 56% !important;
+        height: 14% !important;
     }
 }
 
